--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Neon Developer NTP",
+  "name": "Neon Theme",
   "version": "1.0.0",
   "description": "A neon, futuristic new tab page for developers.",
   "chrome_url_overrides": {
@@ -8,6 +8,6 @@
   },
   "permissions": [],
   "icons": {
-    "128": "images/ntp_bg.png"
+    "128": "images/ntp_bg.webp"
   }
 }
